src/scss/preloader.scss
body:has(.preloader--show) {
  overflow: hidden;
}

.preloader.preloader--show {
  transform: translateY(0);
}

.preloader {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100%;
  background-color: #fff;

  // Preloader is hidden unless .preloader--show is applied.
  transform: translateY(-100%);
  transition: transform 1s ease;
  will-change: transform;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;

  &__logo {
    height: 20vmin;
  }

  &__progress {
    text-align: center;
    width: 100%;
  }

  &__percent {
    margin-bottom: 1rem;
    font-weight: bold;
  }

  &__bar {
    height: 1rem;
    background-color: #000;
    transition: width 0.25s ease;
  }
}

